--- a/src/layouts/confirmation.fxml
+++ b/src/layouts/confirmation.fxml
@@ -1,6 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <BorderPane prefHeight="50.0" prefWidth="488.0" style="-fx-background-color: #CCCC;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="TOP_LEFT">
+               <children>
+                  <Label prefHeight="47.0" prefWidth="121.0" text="Granska">
+                     <font>
+                        <Font size="32.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+         </top>
+      </BorderPane>
+      <SplitPane dividerPositions="0.4835390946502058" layoutX="88.0" layoutY="99.0" prefHeight="501.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label layoutX="16.0" layoutY="14.0" text="Leverans:" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="14.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="170.0" layoutY="14.0" mnemonicParsing="false" text="Ändra" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Button>
+                  <Label layoutX="16.0" layoutY="66.0" text="Din order leveras till:" AnchorPane.leftAnchor="16.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <TextArea disable="true" editable="false" layoutX="16.0" layoutY="101.0" prefHeight="184.0" prefWidth="200.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="101.0" />
+                  <Label layoutX="16.0" layoutY="302.0" text="Vald leveranstid:" AnchorPane.leftAnchor="16.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="329.0" text="Imorgon" AnchorPane.leftAnchor="14.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="90.0" layoutY="329.0" text="12-15">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label layoutX="14.0" layoutY="14.0" text="Betalning:" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="14.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="186.0" layoutY="14.0" mnemonicParsing="false" text="Ändra" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Button>
+                  <Label layoutX="16.0" layoutY="66.0" text="Kortbetalning:" AnchorPane.leftAnchor="16.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="21.0" layoutY="101.0" text="Kortnummer:" AnchorPane.leftAnchor="16.0" />
+                  <TextField disable="true" editable="false" layoutX="17.0" layoutY="118.0" AnchorPane.leftAnchor="16.0" />
+                  <Label layoutX="21.0" layoutY="143.0" text="Namn på kort:" AnchorPane.leftAnchor="16.0" />
+                  <TextField disable="true" editable="false" layoutX="23.0" layoutY="160.0" AnchorPane.leftAnchor="16.0" />
+                  <Label layoutX="16.0" layoutY="199.0" text="Datum på kort:" AnchorPane.leftAnchor="16.0" />
+                  <Label layoutX="117.0" layoutY="199.0" text="CVC:" />
+                  <TextField disable="true" editable="false" layoutX="14.0" layoutY="221.0" prefHeight="25.0" prefWidth="80.0" AnchorPane.leftAnchor="16.0" />
+                  <TextField disable="true" editable="false" layoutX="117.0" layoutY="221.0" prefHeight="25.0" prefWidth="48.0" />
+                  <Label layoutX="14.0" layoutY="326.0" text="Summa:" AnchorPane.leftAnchor="16.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="91.0" layoutY="326.0" text="50kr">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
+</AnchorPane>
