--- a/src/layouts/checkout.fxml
+++ b/src/layouts/checkout.fxml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="650.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CheckoutController">
+<AnchorPane prefHeight="650.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CheckoutController">
     <children>
         <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <menus>
@@ -39,60 +34,6 @@
             </menus>
         </MenuBar>
       <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
-         <top>
-              <GridPane alignment="CENTER" prefHeight="30.0" prefWidth="1159.0" BorderPane.alignment="BOTTOM_CENTER">
-                  <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
-                      <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
-                  <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="94.0" prefWidth="185.0" />
-                  <ColumnConstraints maxWidth="101.0" minWidth="0.0" prefWidth="28.0" />
-                  <ColumnConstraints maxWidth="148.0" minWidth="52.0" prefWidth="52.0" />
-                  <ColumnConstraints maxWidth="148.0" minWidth="52.0" prefWidth="52.0" />
-                  </columnConstraints>
-                  <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  </rowConstraints>
-                  <children>
-                  <Hyperlink fx:id="cartLink" focusTraversable="false" onAction="#linkClicked" prefHeight="65.0" prefWidth="265.0" text="Varukorg">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </Hyperlink>
-                  <Label text="&gt;" GridPane.columnIndex="1">
-                     <font>
-                        <Font size="40.0" />
-                     </font>
-                  </Label>
-                  <Hyperlink fx:id="deliveryLink" focusTraversable="false" onAction="#linkClicked" text="Leverans" GridPane.columnIndex="2">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </Hyperlink>
-                  <Label text="&gt;" GridPane.columnIndex="3">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </Label>
-                  <Hyperlink fx:id="paymentLink" focusTraversable="false" onAction="#linkClicked" text="Betalning" GridPane.columnIndex="4">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </Hyperlink>
-                  <Hyperlink fx:id="confirmationLink" focusTraversable="false" onAction="#linkClicked" prefHeight="65.0" prefWidth="165.0" text="Granskning" GridPane.columnIndex="6">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </Hyperlink>
-                  <Label text="&gt;" GridPane.columnIndex="5">
-                     <font>
-                        <Font size="35.0" />
-                     </font>
-                  </Label>
-                  </children>
-              </GridPane>
-         </top>
          <center>
             <StackPane prefHeight="150.0" prefWidth="200.0" visible="false" BorderPane.alignment="CENTER">
                <children>
@@ -111,6 +52,47 @@
                </children>
             </AnchorPane>
          </bottom>
+         <top>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Hyperlink fx:id="cartLink" alignment="CENTER" focusTraversable="false" onAction="#linkClicked" text="Varukorg" visited="true" wrapText="true">
+                     <font>
+                        <Font size="35.0" />
+                     </font>
+                  </Hyperlink>
+                  <Label alignment="CENTER" text="&gt;" wrapText="true">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+                  <Hyperlink fx:id="deliveryLink" alignment="CENTER" focusTraversable="false" onAction="#linkClicked" text="Leverans" visited="true" wrapText="true">
+                     <font>
+                        <Font size="35.0" />
+                     </font>
+                  </Hyperlink>
+                  <Label alignment="CENTER" text="&gt;" wrapText="true">
+                     <font>
+                        <Font size="35.0" />
+                     </font>
+                  </Label>
+                  <Hyperlink fx:id="paymentLink" alignment="CENTER" focusTraversable="false" onAction="#linkClicked" text="Betalning" visited="true" wrapText="true">
+                     <font>
+                        <Font size="35.0" />
+                     </font>
+                  </Hyperlink>
+                  <Label alignment="CENTER" text="&gt;" wrapText="true">
+                     <font>
+                        <Font size="35.0" />
+                     </font>
+                  </Label>
+                  <Hyperlink fx:id="confirmationLink" alignment="CENTER" focusTraversable="false" onAction="#linkClicked" text="Granskning" visited="true" wrapText="true">
+                     <font>
+                        <Font size="35.0" />
+                     </font>
+                  </Hyperlink>
+               </children>
+            </HBox>
+         </top>
       </BorderPane>
     </children>
 </AnchorPane>
