--- a/src/layouts/payment.fxml
+++ b/src/layouts/payment.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -17,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PaymentController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PaymentController">
    <children>
       <RadioButton fx:id="invoicePayment" layoutX="31.0" layoutY="23.0" mnemonicParsing="false" onAction="#paymentChosen" text="Betala vid leverans" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
@@ -38,17 +33,20 @@
                <children>
                   <VBox alignment="CENTER" layoutX="201.0" layoutY="66.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../resources/img/checkmark.png" />
-                           </image>
-                        </ImageView>
-                        <Label text="Betala vid leverans! Blablablabla Ha en bra dag" />
+                        <Label text="Betala vid leverans!">
+                           <font>
+                              <Font size="22.0" />
+                           </font></Label>
+                        <Label text="Fortsätt till granskning">
+                           <font>
+                              <Font size="22.0" />
+                           </font>
+                        </Label>
                      </children>
                   </VBox>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="cardPane" style="-fx-border-color: black;">
+            <AnchorPane fx:id="cardPane" style="-fx-border-color: black;" visible="false">
                <children>
                   <Label layoutX="10.0" layoutY="10.0" text="Kortnummer" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <font>
